#
# Copyright 2017 Bitwise IO, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------------


[package]
name = "intkey_rust"
version = "0.8.0"
authors = ["Bitwise IO, Inc."]

[dependencies]
sawtooth-sdk = { path = "../../rust" }
rust-crypto = "0.2"
clap = "2"
log = "0.4"
log4rs = "0.8"
cbor-codec = "0.7"
